# project-templates

./: .gitignore  .pre-commit-config.yaml  PR-9-CLOSURE-ANALYSIS.md  README.md  SESSION-HANDOFF-PR9-2025-11-12.md  SESSION_HANDOVER.md  test-hook-logic-simple.sh  test-results-strong.txt  test-results-weak.txt
.githooks/: check-conventional-commit.py
.github/workflows/: commit-format.yml  issue-validation.yml  pre-commit-validation.yml  (+4 more)
docs/: GITHUB_SETUP.md  PROJECT_COMPLETION_SUMMARY.md
issues/: ISSUE-6-TESTING-ASSESSMENT.md  customization-docs.md  migrate-workflows.md  template-validation.md
python-project/: .gitignore  .pre-commit-config.yaml  CUSTOMIZATION.md  README.md  pyproject.toml
python-project/.github/workflows/: README.md  block-ai-attribution.yml  ci.yml  commit-format.yml  pre-commit-validation.yml  protect-master.yml  verify-session-handoff.yml
python-project/tests/: __init__.py  test_example.py
rust-project/: .gitignore  .pre-commit-config.yaml  CUSTOMIZATION.md  Cargo.toml  README.md
rust-project/.github/workflows/: README.md  block-ai-attribution.yml  ci.yml  commit-format.yml  pr-title-check.yml  pre-commit-validation.yml  protect-master.yml  rust-quality.yml  verify-session-handoff.yml
rust-project/scripts/: setup-github-protection.sh
rust-project/src/: lib.rs  main.rs
rust-project/tests/: integration_test.rs
shell-project/: .gitignore  .pre-commit-config.yaml  CUSTOMIZATION.md  README.md  example-script.sh  validate-workflow.sh
tests/: test_customization_docs.py  test_customization_e2e.sh  validate_customization.sh
(+12 files in other folders)
